--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 
 <head>
     <title>Home</title>
+
+    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="/img/car.ico">
+
 </head>
 
 <body>
-    <?php echo '<p>Hello World</p>'; ?>
+    <p>Hello World</p>
     <button>test button</button>
 
 
