--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
             <li data-page="index"><a href="index.php">Home</a></li>
             <li data-page="dashboard"><a href="dashboard.php">Dashboard</a></li>
             <li><a href="search_people.php"><i class="fa fa-fw fa-user"></i> People</a></li>
-            <li data-page="search_people"><a href="search_people.php">People</a></li>
 
-            <li data-page="search_vehicle"><a href="search_vehicle.php">Vehicle</a></li>
+            <li data-page="search_people"><a href="/php/search_people.php">People</a></li>
+
+            <!-- <li data-page="search_vehicle"><a href="search_vehicle.php">Vehicle</a></li> -->
+
             <li data-page="add_vehicle"><a href="add_vehicle.php">Add Vehicle</a></li>
             <li data-page="report"><a href="report.php">Report</a></li>
 
