--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <ul id="myMenu">
             <li data-page="index"><a href="index.php">Home</a></li>
             <li data-page="dashboard"><a href="dashboard.php">Dashboard</a></li>
-            <li><a href="search_people.php"><i class="fa fa-fw fa-user"></i> People</a></li>
+            <li><a href="search_people.html"><i class="fa fa-fw fa-user"></i> People</a></li>
 
-            <li data-page="search_people"><a href="/php/search_people.php">People</a></li>
+            <li data-page="search_people"><a href="/php/search_people.html">People</a></li>
 
-            <!-- <li data-page="search_vehicle"><a href="search_vehicle.php">Vehicle</a></li> -->
+            <li data-page="search_vehicle"><a href="search_vehicle.php">Vehicle</a></li>
 
             <li data-page="add_vehicle"><a href="add_vehicle.php">Add Vehicle</a></li>
             <li data-page="report"><a href="report.php">Report</a></li>
@@ -76,25 +76,29 @@
 
         <button>test button</button>
 
-        <table class="table table-striped">
-            <tr>
-                <th>username</th>
-                <th>password</th>
-            </tr>
-            <tr>
-                <td>mcnulty</td>
-                <td>plod123</td>
-            </tr>
-            <tr>
-                <td>moreland</td>
-                <td>fuzz42</td>
-            </tr>
-        </table>
+        <div class="container">
+            <table class="table table-striped">
+                <tr>
+                    <th>username</th>
+                    <th>password</th>
+                </tr>
+                <tr>
+                    <td>mcnulty</td>
+                    <td>plod123</td>
+                </tr>
+                <tr>
+                    <td>moreland</td>
+                    <td>fuzz42</td>
+                </tr>
+            </table>
+        </div>
+        <br>
 
         <form>
             <input placeholder=input...>
         </form>
 
+        <br>
 
         <table>
             <tr>
@@ -107,7 +111,7 @@
             </tr>
         </table>
 
-
+        <br>
 
         <table class="table table-striped">
             <thead>
@@ -134,7 +138,7 @@
             </tbody>
         </table>
 
-
+        <br>
 
         <table class="table table-striped">
             <thead>
@@ -171,7 +175,7 @@
 
     <footer>
         <hr>
-        <p><a href="index.php">back to home</a></p>
+        <p><a href="index.html">back to home</a></p>
         <p>
             © 2023 - 4039 DIS Database Interface and Software Design Principle
             <!-- - <a href="#">Disclaimer</a> -->
