--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
         <p>Please login first. <a href='login.php'>Login</a></p>
         <hr>
 
+
+        <div w3-include-html="content.html"></div> 
+
+        <script>
+            includeHTML();
+        </script>
+
         <h2>Coursework 2 - Incidents Management system</h2>
 
         <p>
