--- a/inc/incontent.html
+++ b/inc/incontent.html
@@ -1,4 +1,4 @@
-<a href="howto_google_maps.asp">Google Maps</a><br>
+<a href="https://www.google.com/maps">Google Maps</a><br>
 <a href="howto_css_animate_buttons.asp">Animated Buttons</a><br>
 <a href="howto_css_modals.asp">Modal Boxes</a><br>
 <a href="howto_js_animate.asp">Animations</a><br>
