--- a/index.html
+++ b/index.html
@@ -1,120 +1,91 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Home</title>
-
+    <title>Cousework 2</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="../css/mvp.css"> -->
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" type="image/x-icon" href="/img/car.ico">
 
-</head> -->
 
-<!-- <body> -->
-
-
-<!-- sidenav bar -->
-<!-- <div class="sidenav">
-        <div class="closebtn" onclick="closeNav()">
-            <a href="javascript:void(0)">×</a>
-        </div>
-
-        <div class="search" onkeyup="searchMenu()">
-            <input type="text" id="mySearch" placeholder="Search" title="Type in a category">
-        </div>
-
+    <!-- sidenav bar -->
+    <div class="sidenav">
+        <div class="closebtn" onclick="closeNav()"><a href="javascript:void(0)">×</a></div>
+        <div class="search" onkeyup="searchMenu()"><input type="text" id="mySearch" placeholder="Search"
+                title="Type in a category"></div>
         <ul id="myMenu">
-            <li data-page="index"><a href="index.php">Home</a></li>
-            <li data-page="dashboard"><a href="dashboard.php">Dashboard</a></li> -->
-<!-- <li><a href="search_people.html"><i class="fa fa-fw fa-user"></i> People</a></li> -->
-<!-- 
-            <li data-page="search_people"><a href="/php/search_people.html">People</a></li>
+            <li data-page="index"><a href="/index.html">Home</a></li>
+            <li data-page="dashboard"><a href="/html/dashboard.html">Dashboard</a></li>
+            <!-- <li><a href="search_people.php"><i class="fa fa-fw fa-user"></i> People</a></li> -->
+            <li data-page="search_people"><a href="/html/search_people.html">People</a></li>
 
-            <li data-page="search_vehicle"><a href="search_vehicle.php">Vehicle</a></li>
-
+            <li data-page="search_vehicle"><a href="/search_vehicle.php">Vehicle</a></li>
             <li data-page="add_vehicle"><a href="add_vehicle.php">Add Vehicle</a></li>
             <li data-page="report"><a href="report.php">Report</a></li>
-
 
             <li data-page="fine"><a href="fine.php">Fine</a></li>
             <li data-page="add_police"><a href="add_police.php">Add Police User</a></li>
             <li data-page="audit_log"><a href="audit_log.php">Audit</a></li>
 
-
+            <!-- <a href="logout.php" class="split">Logout</a> -->
             <a href="login.php" class="split">Login</a>
         </ul>
     </div>
 
+    <button class="openbtn" onclick="toggleNav()">☰</button>
+    <!-- sidenav bar end -->
+</head>
+
+<body>
 
 
     <main>
-        <button class="openbtn" onclick="toggleNav()">☰</button>
 
         <h1>
             Incidents Management system (IMS)
         </h1>
 
-        <p>Please login first. <a href='login.php'>Login</a></p> -->
+        <p>Username: <strong> </strong>. You can now operate. <a href='logout.php'>Logout</a></p>
+        <p>Please login first. <a href='login.html'>Login</a></p>
 
-
-
-
-<main>
-
-    <!-- <h1>Coursework 2</h1> -->
-    <h1>
-        Incidents Management system (IMS)
-    </h1>
-
-    <!-- <?php if (isset($_SESSION['username'])) { ?>
-        <p>Username: <strong>
-                <?php echo "" . $_SESSION['username'] . "" ?>
-            </strong>. You can now operate. <a href='logout.php'>Logout</a></p>
-        <?php } else { ?> -->
-    <p>Please login first. <a href='login.html'>Login</a></p>
-    <!-- <?php } ?> -->
-
-    <!-- <?php require_once "inc/config.php"; ?> -->
-    <hr>
-    <div id="include_html" include-html="inc/incontent.html"></div>
-
-    <div id="include_html" include-html="inc/header.html"></div>
-    <hr>
-
-
-    <h2>Coursework 2 - Incidents Management system</h2>
-
-    <p>
-        The IMS is a web-based system that allows police officers to manage incidents, vehicles, and people. The
-        system is to be used by police officers to record incidents, and to add and search for people and vehicles.
-        The system is also to be used by police administrators to add new police officers and to associate fines to
-        incidents. The system also provides an audit trail of database accesses and changes.
-    </p>
-    <br>
-</main>
-
-<div id="include_html" include-html="inc/footer.html"></div>
-
-<script src="js/script.js"></script>
-
-<!-- </main> -->
-
-<!-- <footer>
         <hr>
-        <p><a href="index.html">back to home</a></p>
+        <div id="include_html" include-html="inc/incontent.html"></div>
+
+        <!-- <div id="include_html" include-html="inc/header.html"></div> -->
+        <hr>
+
+        <h2>Coursework 2 - Incidents Management system</h2>
+
+        <p>
+            The IMS is a web-based system that allows police officers to manage incidents, vehicles, and people. The
+            system is to be used by police officers to record incidents, and to add and search for people and vehicles.
+            The system is also to be used by police administrators to add new police officers and to associate fines to
+            incidents. The system also provides an audit trail of database accesses and changes.
+        </p>
+        <br>
+    </main>
+
+    <!-- <div id="include_html" include-html="inc/footer.html"></div> -->
+
+    <!-- <script src="js/script.js"></script> -->
+
+
+    <footer>
+        <hr>
+        <p><a href="index.html">back to CW2 home</a></p>
         <p>
             © 2023 - 4039 DIS Database Interface and Software Design Principle
-            - <a href="#">Disclaimer</a>
         </p>
-    </footer> -->
+    </footer>
 
+    <script src="js/script.js"></script>
 
-<!-- </body> -->
+</body>
 
-<!-- </html> -->
+</html>
