--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -2,16 +2,15 @@
 <html>
 
 <head>
-    <title>Cousework 2</title>
+    <title>Dashboard</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- <link rel="stylesheet" href="../css/mvp.css"> -->
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/img/car.ico">
+    <link rel="icon" type="image/x-icon" href="/img/book1.ico">
 
 
     <!-- sidenav bar -->
@@ -45,7 +44,7 @@
 
 <body>
     <main>
-        <p>Login as <strong>['username']</strong> successful. You can now execute queries.</p>
+        <h1>Dashboard</h1>
         <!-- Your role is <strong>" . $_SESSION['role'] . "</strong>.<br><br> -->
 
         <button class="btn btn-primary" onclick="window.location.href='dashboard.php'">Dashboard</button>
