--- a/inc/header.html
+++ b/inc/header.html
@@ -2,21 +2,18 @@
 <html>
 
 <head>
-    <!-- <title>CW-2</title> -->
-    <title>Cousework 2</title>
+    <title>CS with AI</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- <link rel="stylesheet" href="../css/mvp.css"> -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="/img/car.ico">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/toc.css">
 
-</head>
+    <link rel="icon" type="image/x-icon" href="/img/book1.ico">
 
-<body>
 
     <!-- sidenav bar -->
     <div class="sidenav">
@@ -24,18 +21,17 @@
         <div class="search" onkeyup="searchMenu()"><input type="text" id="mySearch" placeholder="Search"
                 title="Type in a category"></div>
         <ul id="myMenu">
-            <li data-page="index"><a href="index.html">Home</a></li>
-            <li data-page="dashboard"><a href="dashboard.html">Dashboard</a></li>
-            <!-- <li><a href="search_people.php"><i class="fa fa-fw fa-user"></i> People</a></li> -->
-            <li data-page="search_people"><a href="php/search_people.html">People</a></li>
+            <li data-page="index"><a href="/index.html">Home</a></li>
+            <li data-page="html/dashboard"><a href="/html/dashboard.html">Dashboard</a></li>
+            <li data-page="ai"><a href="ai.html">AI</a></li>
 
-            <li data-page="search_vehicle"><a href="search_vehicle.php">Vehicle</a></li>
+            <li data-page="search_vehicle"><a href="/search_vehicle.php">Vehicle</a></li>
             <li data-page="add_vehicle"><a href="add_vehicle.php">Add Vehicle</a></li>
             <li data-page="report"><a href="report.php">Report</a></li>
 
             <li data-page="fine"><a href="fine.php">Fine</a></li>
             <li data-page="add_police"><a href="add_police.php">Add Police User</a></li>
-            <li data-page="audit_log"><a href="audit_log.php">Audit</a></li>
+            <li data-page="test"><a href="test.html">Test</a></li>
 
             <!-- <a href="logout.php" class="split">Logout</a> -->
             <a href="login.php" class="split">Login</a>
@@ -43,4 +39,5 @@
     </div>
 
     <button class="openbtn" onclick="toggleNav()">☰</button>
-
+    <!-- sidenav bar end -->
+</head>
