--- a/ai.html
+++ b/ai.html
@@ -23,7 +23,7 @@
         <ul id="myMenu">
             <li data-page="index"><a href="/index.html">Home</a></li>
             <li data-page="html/dashboard"><a href="/html/dashboard.html">Dashboard</a></li>
-            <li data-page="ai"><a href="ai.html">AI</a></li>
+            <li data-page="search_people"><a href="/html/search_people.html">People</a></li>
 
             <li data-page="search_vehicle"><a href="/search_vehicle.php">Vehicle</a></li>
             <li data-page="add_vehicle"><a href="add_vehicle.php">Add Vehicle</a></li>
@@ -31,9 +31,8 @@
 
             <li data-page="fine"><a href="fine.php">Fine</a></li>
             <li data-page="add_police"><a href="add_police.php">Add Police User</a></li>
-            <li data-page="test"><a href="test.html">Test</a></li>
+            <li data-page="audit_log"><a href="audit_log.php">Audit</a></li>
 
-            <!-- <a href="logout.php" class="split">Logout</a> -->
             <a href="login.php" class="split">Login</a>
         </ul>
     </div>
@@ -42,27 +41,20 @@
     <!-- sidenav bar end -->
 </head>
 
-<body>
-    <!-- <header>
-        <div class="header">
-            <h1>Incidents Management system (IMS)</h1>
-            <p>Username: <strong> </strong>. You can now operate. <a href='logout.php'>Logout</a></p>
-            <p>Please login first. <a href='login.html'>Login</a></p>
-        </div>
-    </header> -->
+<div id="header-placeholder"></div>
+<script>
+    $(function () {
+        $("#header-placeholder").load("inc/header.html");
+    });
+</script>
 
+<body>
 
     <main>
 
         <h1 id="heading1">
-            Incidents Management system (IMS)
+            CS with AI
         </h1>
-
-        <!-- <p>Username: <strong> </strong>. You can now operate. <a href='logout.php'>Logout</a></p>
-        <p>Please login first. <a href='login.html'>Login</a></p> -->
-
-        <!-- <hr>
-        <div id="include_html" include-html="inc/incontent.html"></div> -->
 
         <hr>
 
