--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>CS with AI</title>
+    <title>Notes</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,8 +55,14 @@
     <main>
 
         <h1 id="heading1">
-            Incidents Management system (IMS)
+            Notes
         </h1>
+        <cite>
+            What I cannot create, I don't understand.
+        </cite>
+        <p>
+            <em><strong>Richard Feynman</strong></em>
+        </p>
 
         <!-- <p>Username: <strong> </strong>. You can now operate. <a href='logout.php'>Logout</a></p>
         <p>Please login first. <a href='login.html'>Login</a></p> -->
